--- a/app/src/main/res/layout/task_detail_activity.xml
+++ b/app/src/main/res/layout/task_detail_activity.xml
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:title="@string/taskdetailscreen"
-            tools:ignore="MissingConstraints" />
+            tools:ignore="MissingClass,MissingConstraints" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
